--- a/css/estilo.css
+++ b/css/estilo.css
@@ -64,7 +64,7 @@ ul li a{
 }
 
 #banner{
-    height: 450px;
+    height: 58.5rem;
     margin-bottom: 35px;
     position: relative;
     display: flex;
